2017-04-19  Per Bothner  <per@bothner.com>

	* ClassType.java (classfileFormatVersion): Make somewhat newer.

2017-01-01  Per Bothner  <per@bothner.com>

	* ClassType.java (isCompatibleWithValue): If this is an interface that
	extends valueType assume compatible.

2016-12-03  Per Bothner  <per@bothner.com>

	* Type.java (isCompatibleWithValue): Slight change to return value-
	return 0 when a "narrowing is needed, evenf if always compatible.
	Also start by calling Type.isSame.
	(static isCompatibleWithValue): Don't need equality test.
	* ClassType.java (isCompatibleWithValue): Check Type.isSame.

	* AnnotationEntry.java (asAnnotationValue): Generalize String
	value to allow allow any CharSequence.

2016-09-03  Per Bothner  <per@bothner.com>

	* ClassType.java (JAVA_9_VERSION): New constant.
	* ClassType.java (checkSingleAbstractMethod): Make some locals final.

2016-08-29  Per Bothner  <per@bothner.com>

	* ClassType.java (checkSingleAbstractMethod): Fix logic to properly
	search superclasses - specifically Object.  Fixes Savannah
	bug #48938 "lambda cannot be cast to java.util.Comparator".
	(getMethods): Search Object as superclass of interfaces.
	Also fix a performance bug.
	* Filter.java: Make parameterized.

	* Type.java (promoteIfUnsigned): Fix bug which caused boolean nd char
	to be propmoted to int.

2016-07-12  Per Bothner  <per@bothner.com>

	* Type.java (promotedIfUnsigned): New method.

2016-06-21  Per Bothner  <per@bothner.com>

	* EnclosingMethodAttr.java (print): Fix handling when
	method_index is 0.

2016-04-28  Tom Bousso <tombousso@gmail.com>

	* TypeVariable.java (equals): New method.

2016-04-24  Per Bothner  <per@bothner.com>

	* Method.java (makeCloneMethod): Set classfile from Type.objectType
	rather than Type.pointer_type which is not initialized when
	makeCloneMethod is called.  Also make the method non-public.
	This fixes Savannah bug #47772 "Array clone doesn't work".

2016-04-21  Per Bothner  <per@bothner.com>
