@@ -1,3 +1,7 @@
+2017-05-08  Per Bothner  <per@bothner.com>
+
+	* CodeAttr.java (emitIfRaw): New method.
+
 2017-04-19  Per Bothner  <per@bothner.com>
 
 	* ClassType.java (classfileFormatVersion): Make somewhat newer.
